[gd_scene load_steps=6 format=2]

[ext_resource path="res://Combat/CommandWindow/CommandWindow.gd" type="Script" id=1]
[ext_resource path="res://Fonts/CommandFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Combat/CommandWindow/Actions.gd" type="Script" id=3]
[ext_resource path="res://Combat/CommandWindow/Shift.gd" type="Script" id=4]
[ext_resource path="res://Combat/CommandWindow/Stance.gd" type="Script" id=5]

[node name="CommandWindow" type="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_right = 137.0
margin_bottom = 136.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Hint", "Mouse", "custom_fonts" ]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 106.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="ActionButton" type="MenuButton" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 106.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Action"
flat = false
align = 1
items = [  ]
script = ExtResource( 3 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Action" type="PopupMenu" parent="VBoxContainer/ActionButton" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
popup_exclusive = false
items = [  ]
hide_on_state_item_selection = false
_sections_unfolded = [ "custom_fonts" ]

[node name="ShiftButton" type="MenuButton" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 106.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Shift"
flat = false
align = 1
items = [  ]
script = ExtResource( 4 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Shift" type="PopupMenu" parent="VBoxContainer/ShiftButton" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = 12.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
popup_exclusive = false
items = [  ]
hide_on_state_item_selection = false
_sections_unfolded = [ "Columns" ]

[node name="StanceButton" type="MenuButton" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 92.0
margin_right = 106.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Stance"
flat = false
align = 1
items = [  ]
script = ExtResource( 5 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Stance" type="PopupMenu" parent="VBoxContainer/StanceButton" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = 12.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
popup_exclusive = false
items = [  ]
hide_on_state_item_selection = false

[connection signal="visibility_changed" from="." to="." method="_on_CommandWindow_visibility_changed"]

[connection signal="id_pressed" from="VBoxContainer/ActionButton/Action" to="VBoxContainer/ActionButton" method="_on_Action_id_pressed"]

[connection signal="id_pressed" from="VBoxContainer/ShiftButton/Shift" to="VBoxContainer/ShiftButton" method="_on_Shift_id_pressed"]

[connection signal="about_to_show" from="VBoxContainer/StanceButton/Stance" to="VBoxContainer/StanceButton" method="_on_Stance_about_to_show"]

[connection signal="id_pressed" from="VBoxContainer/StanceButton/Stance" to="VBoxContainer/StanceButton/Stance" method="_on_Stance_id_pressed"]

[connection signal="popup_hide" from="VBoxContainer/StanceButton/Stance" to="VBoxContainer/StanceButton" method="_on_Stance_popup_hide"]


